--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
 
     <!-- AOS (Animate on Scroll) Library JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Caminho corrigido para o script principal do site -->
     <script type="module" src="script.js"></script>
 </body>
 </html>
