--- a/admin.html
+++ b/admin.html
@@ -336,6 +336,6 @@
     </div>
 
     <!-- Caminho corrigido para o script principal do admin -->
-    <script type="module" src="./admin/js/admin-script.js"></script>
+    <script type="module" src="./admin/js/main.js"></script>
 </body>
 </html>
