--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <!-- Mobile Menu Overlay - Ajustado z-index -->
         <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-[55] hidden" aria-hidden="true"></div>
 
-        <!-- Mobile Menu - Ajustado z-index -->
-        <div id="mobile-menu" class="fixed inset-y-0 left-0 w-64 bg-white shadow-xl z-[60] transform -translate-x-full transition-transform duration-300 ease-in-out" role="dialog" aria-modal="true" aria-labelledby="mobile-menu-title">
+        <!-- Mobile Menu - Ajustado z-index e largura para cobrir mais a tela -->
+        <div id="mobile-menu" class="fixed inset-y-0 left-0 w-3/4 max-w-xs bg-white shadow-xl z-[60] transform -translate-x-full transition-transform duration-300 ease-in-out" role="dialog" aria-modal="true" aria-labelledby="mobile-menu-title">
             <div class="flex justify-between items-center p-4 border-b border-slate-200">
                 <h3 id="mobile-menu-title" class="font-bold text-lg">Menu</h3>
                 <button id="close-mobile-menu" class="text-slate-500 hover:text-slate-800" aria-label="Fechar menu mobile"><i data-feather="x" class="w-6 h-6"></i></button>
