--- a/index.html
+++ b/index.html
@@ -585,5 +585,145 @@
     <!-- AOS (Animate on Scroll) Library JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="script.js"></script>
+
+    <!-- SCRIPT DE FUNCIONALIDADES ADICIONAIS -->
+    <script type="module">
+        import { state, setSelectedShipping } from './js/state.js';
+        import { showToast } from './js/ui.js';
+
+        // --- Atualizador de Total do Carrinho ---
+        function updateCartTotals() {
+            const subtotalEl = document.getElementById('cart-subtotal');
+            const discountInfoEl = document.getElementById('discount-info');
+            const shippingCostLine = document.getElementById('shipping-cost-line');
+            const shippingCostEl = document.getElementById('shipping-cost');
+            const totalEl = document.getElementById('cart-total');
+
+            if (!subtotalEl || !totalEl) return;
+
+            let subtotal = parseFloat(subtotalEl.textContent.replace('R$', '').replace(',', '.').trim());
+            
+            let discount = 0;
+            if (state.appliedCoupon) {
+                const discountText = discountInfoEl.querySelector('span:last-child');
+                if(discountText) {
+                    discount = parseFloat(discountText.textContent.replace('- R$', '').replace(',', '.').trim());
+                }
+            }
+
+            let shippingCost = 0;
+            if (state.selectedShipping) {
+                shippingCost = state.selectedShipping.price;
+                shippingCostEl.textContent = `R$ ${shippingCost.toFixed(2).replace('.', ',')}`;
+                shippingCostLine.classList.remove('hidden');
+            } else {
+                shippingCostLine.classList.add('hidden');
+            }
+
+            const total = subtotal - discount + shippingCost;
+            totalEl.textContent = `R$ ${total.toFixed(2).replace('.', ',')}`;
+        }
+
+
+        // --- Lógica para o Cálculo de Frete ---
+        async function handleShippingCalculation() {
+            const cepInput = document.getElementById('cep-input');
+            const cep = cepInput.value.replace(/\D/g, '');
+            const shippingOptionsEl = document.getElementById('shipping-options');
+            const calculateBtn = document.getElementById('calculate-shipping-btn');
+            const btnText = calculateBtn.querySelector('.btn-text');
+            const loader = calculateBtn.querySelector('.loader-sm');
+
+            if (cep.length !== 8) {
+                showToast("Por favor, insira um CEP válido.", true);
+                return;
+            }
+
+            btnText.classList.add('hidden');
+            loader.classList.remove('hidden');
+            calculateBtn.disabled = true;
+
+            // Simulação de chamada de API
+            await new Promise(resolve => setTimeout(resolve, 1500));
+
+            // Opções de frete simuladas
+            const options = [
+                { name: 'SEDEX', price: parseFloat((Math.random() * 15 + 25).toFixed(2)), days: '3-5 dias úteis' },
+                { name: 'PAC', price: parseFloat((Math.random() * 10 + 15).toFixed(2)), days: '7-12 dias úteis' }
+            ];
+
+            shippingOptionsEl.innerHTML = options.map(opt => `
+                <label class="flex items-center justify-between p-3 border rounded-md cursor-pointer hover:bg-gray-100">
+                    <div class="flex items-center">
+                        <input type="radio" name="shipping-option" class="h-4 w-4 text-black focus:ring-black" value='${JSON.stringify(opt)}'>
+                        <div class="ml-3 text-sm">
+                            <p class="font-semibold">${opt.name}</p>
+                            <p class="text-gray-500">${opt.days}</p>
+                        </div>
+                    </div>
+                    <span class="font-semibold">R$ ${opt.price.toFixed(2).replace('.', ',')}</span>
+                </label>
+            `).join('');
+
+            // Adiciona listeners para as novas opções de rádio
+            shippingOptionsEl.querySelectorAll('input[name="shipping-option"]').forEach(radio => {
+                radio.addEventListener('change', (e) => {
+                    const selectedOption = JSON.parse(e.target.value);
+                    setSelectedShipping(selectedOption);
+                    updateCartTotals();
+                });
+            });
+
+            btnText.classList.remove('hidden');
+            loader.classList.add('hidden');
+            calculateBtn.disabled = false;
+        }
+
+        // --- Lógica para as Estrelas de Avaliação e FAQ ---
+        function setupInteractiveListeners() {
+            document.body.addEventListener('click', (e) => {
+                // Lógica das estrelas
+                const star = e.target.closest('#review-rating-stars > i');
+                if (star) {
+                    const ratingValue = star.dataset.value;
+                    const starsContainer = star.parentElement;
+                    const ratingInput = document.getElementById('review-rating-value');
+                    
+                    if(ratingInput) {
+                        ratingInput.value = ratingValue;
+                    }
+
+                    const allStars = starsContainer.querySelectorAll('i');
+                    allStars.forEach(s => {
+                        const isFilled = parseInt(s.dataset.value) <= parseInt(ratingValue);
+                        s.classList.toggle('filled', isFilled);
+                        s.classList.toggle('text-yellow-500', isFilled);
+                        s.classList.toggle('text-gray-300', !isFilled);
+                    });
+                    feather.replace();
+                }
+
+                // Lógica do FAQ
+                const faqQuestion = e.target.closest('.faq-question');
+                if (faqQuestion) {
+                    const answer = faqQuestion.nextElementSibling;
+                    const icon = faqQuestion.querySelector('i');
+                    const isExpanded = faqQuestion.getAttribute('aria-expanded') === 'true';
+
+                    faqQuestion.setAttribute('aria-expanded', !isExpanded);
+                    answer.classList.toggle('hidden');
+                    icon.style.transform = isExpanded ? 'rotate(0deg)' : 'rotate(180deg)';
+                }
+            });
+
+            const calculateShippingBtn = document.getElementById('calculate-shipping-btn');
+            if (calculateShippingBtn) {
+                calculateShippingBtn.addEventListener('click', handleShippingCalculation);
+            }
+        }
+
+        // Inicia os listeners quando o DOM estiver pronto
+        document.addEventListener('DOMContentLoaded', setupInteractiveListeners);
+    </script>
 </body>
 </html>
