--- a/index.html
+++ b/index.html
@@ -597,12 +597,12 @@
 
     <!-- AOS (Animate on Scroll) Library JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script type="module" src="/script.js"></script>
+    <script type="module" src="./script.js"></script>
 
     <!-- SCRIPT DE FUNCIONALIDADES ADICIONAIS -->
     <script type="module">
-        import { state, setSelectedShipping } from '/js/state.js';
-        import { showToast } from '/js/ui.js';
+        import { state, setSelectedShipping } from './js/state.js';
+        import { showToast } from './js/ui.js';
 
         // --- Atualizador de Total do Carrinho ---
         function updateCartTotals() {
