--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                                 <span class="text-white text-2xl font-bold">HIDRATANTES</span>
                             </div>
                         </a>
-                        <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="300" data-page="fragrancias" data-category-filter="home-spray">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/4.png" alt="Frasco de home spray num ambiente de sala de estar." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                        <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="300" data-page="fragrancias" data-category-filter="body-splash">
+                            <img src="https://github.com/DiegoSutil/testesansei1/blob/main/images/Gemini_Generated_Image_1sgr611sgr611sgr%20(1).png?raw=true" alt="Frasco de Body Splash com um fundo de praia e mar." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
-                                <span class="text-white text-2xl font-bold">HOME-SPRAY</span>
+                                <span class="text-white text-2xl font-bold">BODY SPLASH</span>
                             </div>
                         </a>
                         <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="400" data-page="fragrancias" data-category-filter="difusores">
