--- a/admin.html
+++ b/admin.html
@@ -164,9 +164,10 @@
                                 <option value="">Selecione uma categoria</option>
                                 <option value="perfume">Perfume</option>
                                 <option value="decant">Decant</option>
+                                <option value="body-splash">Body Splash</option>
                                 <option value="hidratantes">Hidratantes</option>
-                                <option value="home-spray">Home-Spray</option>
                                 <option value="difusores">Difusores</option>
+                                <option value="kit">Kit</option>
                                 <option value="masculino">Masculino</option>
                                 <option value="feminino">Feminino</option>
                                 <option value="unissex">Unissex</option>
