--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
                         <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="100" data-page="fragrancias" data-category-filter="perfume">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/2.jpg" alt="Mulher elegante a segurar um frasco de perfume." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                            <img src="https://github.com/DiegoSutil/testesansei1/blob/main/images/Gemini_Generated_Image_gwdjlcgwdjlcgwdj.png?raw=true" alt="Frasco de perfume sobre uma superfície de mármore com flores." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
                                 <span class="text-white text-2xl font-bold">PERFUMES</span>
                             </div>
