--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                                 <span class="text-white text-2xl font-bold">PERFUMES</span>
                             </div>
                         </a>
-                        <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="200" data-page="fragrancias" data-category-filter="hidratantes">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/3.jpg" alt="Frasco de hidratante corporal ao lado de flores brancas." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                        <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="200" data-page="fragrancias" data-category-filter="cremes">
+                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/3.jpg" alt="Pote de creme corporal ao lado de flores brancas." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
-                                <span class="text-white text-2xl font-bold">HIDRATANTES</span>
+                                <span class="text-white text-2xl font-bold">CREMES</span>
                             </div>
                         </a>
                         <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="300" data-page="fragrancias" data-category-filter="body-splash">
@@ -219,10 +219,10 @@
                                 <span class="text-white text-2xl font-bold">BODY SPLASH</span>
                             </div>
                         </a>
-                        <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="400" data-page="fragrancias" data-category-filter="difusores">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/5.jpg" alt="Difusor de aromas com varetas num balcão de casa de banho." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                        <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="400" data-page="fragrancias" data-category-filter="decant">
+                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/5.jpg" alt="Vários frascos de decants de perfume." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
-                                <span class="text-white text-2xl font-bold">DIFUSORES</span>
+                                <span class="text-white text-2xl font-bold">DECANTES</span>
                             </div>
                         </a>
                     </div>
