--- a/admin.html
+++ b/admin.html
@@ -165,8 +165,7 @@
                                 <option value="perfume">Perfume</option>
                                 <option value="decant">Decant</option>
                                 <option value="body-splash">Body Splash</option>
-                                <option value="hidratantes">Hidratantes</option>
-                                <option value="difusores">Difusores</option>
+                                <option value="cremes">Cremes</option>
                                 <option value="kit">Kit</option>
                                 <option value="masculino">Masculino</option>
                                 <option value="feminino">Feminino</option>
