--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             </div>
                         </a>
                         <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="200" data-page="fragrancias" data-category-filter="cremes">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/3.jpg" alt="Pote de creme corporal ao lado de flores brancas." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                            <img src="https://github.com/DiegoSutil/testesansei1/blob/main/images/Gemini_Generated_Image_nat6klnat6klnat6%20(1).png?raw=true" alt="Potes de creme corporal com ingredientes naturais." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
                                 <span class="text-white text-2xl font-bold">CREMES</span>
                             </div>
@@ -220,7 +220,7 @@
                             </div>
                         </a>
                         <a href="#" class="relative block overflow-hidden rounded-lg group aspect-w-4 aspect-h-3" data-aos="fade-up" data-aos-delay="400" data-page="fragrancias" data-category-filter="decant">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/5.jpg" alt="Vários frascos de decants de perfume." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                            <img src="https://github.com/DiegoSutil/testesansei1/blob/main/images/Gemini_Generated_Image_u9vrl9u9vrl9u9vr%20(1).png?raw=true" alt="Vários frascos de decants de perfume em exibição." class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
                                 <span class="text-white text-2xl font-bold">DECANTES</span>
                             </div>
