--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="container mx-auto px-6">
                     <div class="flex flex-col md:flex-row items-center gap-12">
                         <div class="md:w-1/2" data-aos="fade-right">
-                            <img src="https://raw.githubusercontent.com/DiegoSutil/TesteSansei/main/3.jpg" alt="Frasco de perfume masculino com um fundo escuro e sofisticado." class="w-full h-auto rounded-lg shadow-xl">
+                            <img src="https://github.com/DiegoSutil/testesansei1/blob/main/images/Gemini_Generated_Image_6aqi806aqi806aqi.png?raw=true" alt="Homem moderno a aplicar perfume no pescoço." class="w-full h-auto rounded-lg shadow-xl">
                         </div>
                         <div class="md:w-1/2 text-center md:text-left" data-aos="fade-left">
                             <p class="text-sm text-slate-500 font-semibold mb-2">OS MELHORES AROMAS ESTÃO AQUI!</p>
